--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Tasaoq</string>
+    <string name="app_name">Lammah</string>
     <string name="login_to_continue">Login to Continue</string>
     <string name="username_or_email_address">Username or Email Address</string>
     <string name="password">Password</string>
